fixed terrain parse @ lvldata processing for 10+ grid width; added guard break to crits and indicator and tested; reset attack & defense on deflect; tested attack -> guard break -> attack flow; guard and attack break inidcators and tested show; showed crits as % in debug box

--- a/frontend_canvas/src/App.css
+++ b/frontend_canvas/src/App.css
@@ -110,7 +110,7 @@
 }
 
 .debugDisplay {
-  height: 170px;
+  height: 200px;
   width: 480px;
   position: absolute;
   top: 0;
@@ -120,11 +120,12 @@
   border-radius: 5px;
   background-color: rgba(255,255,255,0.4);
   z-index: 3;
+  overflow-y: scroll;
 
   /* display: none; */
 }
 .debugDisplay2 {
-  height: 170px;
+  height: 200px;
   width: 450px;
   position: absolute;
   top: 0;
@@ -133,6 +134,7 @@
   border-radius: 5px;
   background-color: rgba(255,255,255,0.4);
   z-index: 3;
+  overflow-y: scroll;
 
   /* display: none; */
 }
